--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
-header{
+.cabecalho{
+    background-color: black;
+    color: white;
+    display: flex;
+}
+
+.cabecalho-imagem{
+    width: 13%;
+}
+
+.cabecalho2{
     background-color: black;
     color: white;
 }
+
