--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .cabecalho{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .cabecalho-imagem{
-    width: 13%;
+    width: 20%;
 }
 
-.cabecalho2{
-    background-color: black;
-    color: white;
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 130px;
+    font-size: 17px;
 }
-
