--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    font-family: 'Mulish', sans-serif;
+}
 
 .cabecalho{
     background-color: white;
@@ -12,11 +15,11 @@
 }
 
 .cabecalho-imagem{
-    width: 20%;
+    width: 10%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 130px;
-    font-size: 17px;
+    font-size: 20px;
 }
