--- a/style.css
+++ b/style.css
@@ -23,3 +23,12 @@ body{
     margin: 0 130px;
     font-size: 20px;
 }
+.item1-imagem{
+    width: 15%;
+    margin: 0  130px;
+}
+
+.item2-imagem{
+    width: 30%;
+    margin: 50px 100px;
+}
